# taskwarrior-SCALPEL

./: .gitignore  README.md  pyproject.toml  scalpel_run.py  scalpel_smoke.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: AI_FLOW.md  AI_INTERFACE.md  FUNCTIONAL_ROADMAP_CHECKLIST.md  PACKAGING_RELEASE_CHECKLIST.md  PLANNER_CORE.md  PROD_READINESS_CHECKLIST.md  SCHEMA_EVOLUTION_PROTOCOL.md
scalpel/: __init__.py  api.py  bench.py  cli.py  goals.json  goals.py  html_extract.py  interval.py  metrics.py  model.py  normalize.py  palette.py  payload.py  planner.py  process.py  query.py  query_lang.py  schema.py  schema_v1.py  serve.py  serve_apply.py  serve_bootstrap.py  serve_data.py  serve_endpoints.py  serve_http.py  serve_support.py  serve_types.py  taskwarrior.py  validate.py
scalpel/ai/: __init__.py  apply.py  interface.py  io.py  plan_contract.py  plan_io.py  plan_v2.py  slots.py
scalpel/render/: assets.py  html_markup.py  html_shell.py  inline.py  inline_css.py  inline_js.py  js.diff  nautical-readme.md  template.py  template_plan_due_dur.patch  today_template.html
scalpel/render/css/: __init__.py  base.py  calendar.py  header_layout.py  modals_misc.py  panels_palette.py  part01_core.py  part01_tokens_theme.css  part01_tokens_theme.py  part02_base.css  part02_base.py  part02_palette_goals.py  part03_header_layout.css  part03_header_layout.py  part03_selection_ops.py  part04_panels_palette.css  part04_panels_palette.py  part04_rendering.py  part05_calendar.css  part05_calendar.py  part05_commands.py  part06_drag_resize.py  part07_init.py  part07_modals_misc.css  part07_modals_misc.py  tokens_theme.py
scalpel/render/js/: __init__.py  commands.py  core.py  drag_resize.py  init.py  palette_goals.py  part01_core.js  part01_core.py  part02_palette_goals.js  part02_palette_goals.py  part03_selection_ops.js  part03_selection_ops.py  part04_rendering.js  part04_rendering.py  part05_commands.js  part05_commands.py  part06_drag_resize.js  part06_drag_resize.py  part07_init.js  part07_init.py  part08_notes.js  part08_notes.py  persist.js  persist.py  rendering.py  selection_ops.py
scalpel/render/markup/: __init__.py  calendar_panel.py  header.py  layout_close.py  layout_open.py  left_panel.py  overlays.py  right_panel.py
scalpel/schema_contracts/: __init__.py  v1.py  v2.py
scalpel/tools/: __init__.py  _schema_cli.py  ai_plan_lmstudio.py  ai_plan_stub.py  ai_plan_tasks.py  apply_plan_result.py  bench.py  check.py  check_frontend.py  check_wheel.py  ci.py  ci_lite.py  ddmin_shrink.py  doctor.py  filter_payload.py  gen_fixtures.py  minify_fixture.py  mobile_day.py  plan_ops.py  render_payload.py  result.py  smoke_build.py  today_view.py  validate_payload.py  validate_plan_result.py
scalpel/util/: console.py  duration.py  timeparse.py  tz.py  viewkey.py
scripts/: install_pre_commit_hook.py  run_tests.py  scalpel_ai_plan_tasks.sh  scalpel_bench.sh  scalpel_check.sh  scalpel_check_strict.sh  scalpel_ci.sh  scalpel_ci_hygiene.sh  scalpel_ci_lite.sh  scalpel_clean.sh  scalpel_dev.sh  scalpel_doctor.sh  scalpel_filter_payload.sh  scalpel_fixtures_generate_large_payload_v1.py  scalpel_gate.sh  scalpel_gate_local.sh  scalpel_gate_precommit.sh  scalpel_gate_strict.sh  scalpel_gen_fixtures.sh  scalpel_minify_fixture.sh  scalpel_render_payload.sh  scalpel_smoke.sh  scalpel_smoke_strict.sh  scalpel_test_contract.sh  scalpel_validate_payload.sh
tests/: test_contract_ai_apply_overrides.py  test_contract_ai_apply_plan_result.py  test_contract_ai_flow_end_to_end.py  test_contract_ai_plan_contract.py  test_contract_ai_plan_lmstudio_prompt.py  test_contract_ai_plan_lmstudio_tool.py  test_contract_ai_plan_result_io.py  test_contract_ai_plan_stub_tool.py  test_contract_ai_plan_tasks_import.py  test_contract_ai_plan_v2.py  test_contract_apply_plan_result_tool.py  test_contract_bench_tool.py  test_contract_calendar_first_layout.py  test_contract_calendar_visual_regression.py  test_contract_check_preflight.py  test_contract_ci_hygiene.py  test_contract_ci_lite_failure_shrink.py  test_contract_ci_lite_logs.py  test_contract_ci_lite_perf_budget.py  test_contract_ci_lite_selftest_fail.py  test_contract_cli_default_out.py  test_contract_compileall.py  test_contract_completed_calendar.py  test_contract_core_helpers.py  test_contract_ddmin_shrink_tool.py  test_contract_event_readability.py  test_contract_filter_payload_api.py  test_contract_filter_payload_tool.py  test_contract_frontend_assets.py  test_contract_golden_payload_fixture.py  test_contract_golden_payload_large_fixture.py  test_contract_golden_payload_v2_fixture.py  test_contract_html_extraction_parity.py  test_contract_install_pre_commit_hook.py  test_contract_minify_fixture_tool.py  test_contract_notes_toggle.py  test_contract_payload_nautical_opt_in.py  test_contract_payload_nautical_warning.py  test_contract_payload_upgrade.py  test_contract_plan_ops_tool.py  (+41 more)
tests/fixtures/: golden_payload_large_v1.json  golden_payload_v1.json  golden_payload_v2.json  payload_v1_min.json  planner_core_fixture.json
tools/: ai_plan_tasks_bridge.py  ai_plan_tasks_ui.html  verify_equivalence.py
