[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskwarrior-scalpel"
version = "1.0.0"
description = "SCALPEL: Strategic Calendar Action Layer for Planning, Execution, and Logistics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []
authors = [{ name = "SCALPEL contributors" }]
keywords = ["taskwarrior", "timewarrior", "calendar", "planning", "scheduling", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7",
  "coverage[toml]>=7.6",
  "ruff>=0.6",
  "mypy>=1.11",
  "pip-audit>=2.7",
]
release = [
  "build>=1.2",
  "twine>=5",
]

[project.scripts]
scalpel = "scalpel.cli:main"
scalpel-ci = "scalpel.tools.ci:main"
scalpel-doctor = "scalpel.tools.doctor:main"
scalpel-check = "scalpel.tools.check:main"
scalpel-smoke-build = "scalpel.tools.smoke_build:main"
scalpel-gen-fixtures = "scalpel.tools.gen_fixtures:main"
scalpel-minify-fixture = "scalpel.tools.minify_fixture:main"
scalpel-validate-payload = "scalpel.tools.validate_payload:main"
scalpel-render-payload = "scalpel.tools.render_payload:main"
scalpel-filter-payload = "scalpel.tools.filter_payload:main"
scalpel-ddmin-shrink = "scalpel.tools.ddmin_shrink:main"
scalpel-bench = "scalpel.tools.bench:main"
scalpel-plan-ops = "scalpel.tools.plan_ops:main"
scalpel-apply-plan-result = "scalpel.tools.apply_plan_result:main"
scalpel-ai-plan-stub = "scalpel.tools.ai_plan_stub:main"
scalpel-validate-plan-result = "scalpel.tools.validate_plan_result:main"
scalpel-ai-plan-lmstudio = "scalpel.tools.ai_plan_lmstudio:main"
scalpel-check-frontend = "scalpel.tools.check_frontend:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scalpel*"]

[tool.setuptools.package-data]
scalpel = [
  "goals.json",
  "render/*.html",
  "render/*.patch",
  "render/*.md",
  "render/css/*.css",
  "render/js/*.js",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "W"]
# Existing exception translation is intentional but does not yet consistently
# preserve the original exception as a cause.
ignore = ["B904"]

[tool.ruff.lint.per-file-ignores]
"scripts/scalpel_fixtures_generate_large_payload_v1.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
explicit_package_bases = true
follow_imports = "skip"
files = [
  "scalpel/ai/apply.py",
  "scalpel/ai/interface.py",
  "scalpel/ai/io.py",
  "scalpel/ai/plan_io.py",
  "scalpel/api.py",
  "scalpel/bench.py",
  "scalpel/cli.py",
  "scalpel/html_extract.py",
  "scalpel/interval.py",
  "scalpel/model.py",
  "scalpel/normalize.py",
  "scalpel/payload.py",
  "scalpel/planner.py",
  "scalpel/process.py",
  "scalpel/query_lang.py",
  "scalpel/query.py",
  "scalpel/schema_contracts/v1.py",
  "scalpel/schema_v1.py",
  "scalpel/serve.py",
  "scalpel/serve_apply.py",
  "scalpel/serve_data.py",
  "scalpel/taskwarrior.py",
  "scalpel/util/timeparse.py",
  "scalpel/util/tz.py",
  "scalpel/util/duration.py",
  "scalpel/tools/check.py",
  "scalpel/tools/ci.py",
  "scalpel/tools/ci_lite.py",
  "scalpel/tools/ddmin_shrink.py",
  "scalpel/tools/doctor.py",
  "scalpel/tools/gen_fixtures.py",
  "scalpel/tools/result.py",
]

[tool.coverage.run]
branch = true
source = ["scalpel"]

[tool.coverage.report]
fail_under = 35
show_missing = true
skip_covered = true

[tool.bandit]
exclude_dirs = ["build", "tests"]
